--- a/ArvidNyden/ArvidNyden.Client/Pages/Index.cshtml
+++ b/ArvidNyden/ArvidNyden.Client/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Arvid Nyden</h1>
 
-Welcome to your new app.
+In Progress.... 
 
 <SurveyPrompt Title="How is Blazor working for you?" />
