--- a/ArvidNyden/ArvidNyden.Client/Pages/Index.cshtml
+++ b/ArvidNyden/ArvidNyden.Client/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Arvid Nyden</h1>
+<h1>In Progress...</h1>
 
-In Progress.... 
+<img src="image/arvid_movember.jpg" alt="arvid nyden profile image" class="img-rounded img-responsive">
 
 <SurveyPrompt Title="How is Blazor working for you?" />
