--- a/ArvidNyden/ArvidNyden.Client/Shared/NavMenu.cshtml
+++ b/ArvidNyden/ArvidNyden.Client/Shared/NavMenu.cshtml
@@ -23,8 +23,8 @@
                     </NavLink>
                 </li>
                 <li>
-                    <NavLink href="/fetchdata">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <NavLink href="/rss">
+                        <span class='glyphicon glyphicon-th-list'></span> Rss Feed
                     </NavLink>
                 </li>
             </ul>
