--- a/ArvidNyden/ArvidNyden.Client/Pages/FetchData.cshtml
+++ b/ArvidNyden/ArvidNyden.Client/Pages/FetchData.cshtml
@@ -1,45 +1,48 @@
-﻿@using ArvidNyden.Shared
-@page "/fetchdata"
-@inject HttpClient Http
+﻿@using System.Threading.Tasks
+@using ArvidNyden.Shared
+@page "/rss"
+    @inject HttpClient Http
 
-<h1>Weather forecast</h1>
+        <h1>The Nasa Feed</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+        <p>Latest new of Nasa</p>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+        @if (rssList == null)
+        {
+            <p><em>Loading...</em></p>
+        }
+        else
+        {
+            <div class="table-responsive-md">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Image</th>
+                            <th>Title</th>
+                            <th>Published</th>
+                            <th>Summary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in rssList.RssItems)
+                        {
+                        <tr>
+                            <td><img src="@item.ImageUri" alt="rss image" class="img-thumbnail rounded"></td>
+                            <td><a href="@item.SourceUri">@item.Title</a></td>
+                            <td>@item.PublishedDate</td>
+                            <td>@item.Summary</td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
 
-@functions {
-    WeatherForecast[] forecasts;
+        @functions {
+        RssList rssList;
 
-    protected override async Task OnInitAsync()
-    {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("/api/SampleData/WeatherForecasts");
-    }
-}
+        protected override async Task OnInitAsync()
+        {
+            rssList = await Http.GetJsonAsync<RssList>("/api/Rss/List");
+        }
+        }
